Bug 477261 - Unable to join new room
Summary: Unable to join new room
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: 23.08.3
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-11-20 02:30 UTC by kdemathman05
Modified: 2023-11-24 20:59 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of error (12.35 KB, image/png)
2023-11-20 02:30 UTC, kdemathman05
Details

Note You need to log in before you can comment on or make changes to this bug.
Description kdemathman05 2023-11-20 02:30:07 UTC
Created attachment 163307 [details]
Screenshot of error

If you click on something like #plasma-bigscreen:kde.org and you are not in the room already it gives an error that says
```
Room not found There's no room https://matrix.to/#/#plasma-bigscreen:kde.org in the room list. Check the spelling and the account.
```

STEPS TO REPRODUCE
1. click on a channel you are not in in a message
2. 
3. 

OBSERVED RESULT
It didn't join me into that channel rather just giving a weird error

EXPECTED RESULT
Join me into the channel

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch/6.6.1-zen1-1-zen/5.27.9
(available in About System)
KDE Plasma Version: 5.27.9
KDE Frameworks Version: 5.112.0
Qt Version: 5.15.11

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2023-11-24 15:37:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/1449
Comment 2 Tobias Fella 2023-11-24 20:59:42 UTC
Git commit 410258c478d6db5251daea12b3b775c1f73b07c1 by Tobias Fella.
Committed on 24/11/2023 at 19:11.
Pushed by tfella into branch 'master'.

Join rooms when visiting them

M  +1    -1    src/qml/LinkPreviewDelegate.qml
M  +1    -1    src/qml/MessageDelegateContextMenu.qml
M  +1    -1    src/qml/RichLabel.qml
M  +6    -0    src/roommanager.cpp

https://invent.kde.org/network/neochat/-/commit/410258c478d6db5251daea12b3b775c1f73b07c1