Join rooms when visiting them

BUG: 477261